--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ app.*.map.json
 pubspec.lock
 .vscode/
 macos/Podfile.lock
+
+# Android signing keys (keystore)
+android/key.properties
+android/app/*.jks
+*.jks
