--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,39 +14,41 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.5'
           channel: 'stable'
-      
+
       - name: Get dependencies
         run: flutter pub get
-      
+
+      - name: Configure Gradle
+        run: |
+          mkdir -p ~/.gradle
+          echo "org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m" >> ~/.gradle/gradle.properties
+          echo "kotlin.daemon.jvmargs=-Xmx1536m" >> ~/.gradle/gradle.properties
+
       - name: Build APK
         run: flutter build apk --release
-      
+
       - name: Build App Bundle
-        run: flutter
-        
-      - name: Configure Gradle     
-        run: |          mkdir -p ~/.gradle
-          echo "org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m" >> ~/.gradle/gradle.properties
-          echo "kotlin.daemon.jvmargs=-Xmx1536m" >> ~/.gradle/gradle.properties      
+        run: flutter build appbundle --release
+
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: komet-android-apk
           path: build/app/outputs/flutter-apk/app-release.apk
           retention-days: 30
-      
+
       - name: Upload App Bundle artifact
         uses: actions/upload-artifact@v4
         with:
@@ -58,19 +60,19 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.5'
           channel: 'stable'
-      
+
       - name: Get dependencies
         run: flutter pub get
-      
+
       - name: Build iOS
         run: flutter build ios --release --no-codesign
-      
+
       - name: Upload iOS artifact
         uses: actions/upload-artifact@v4
         with:
@@ -82,69 +84,68 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.5'
           channel: 'stable'
-      
+
       - name: Get dependencies
         run: flutter pub get
-      
+
       - name: Build Windows
         run: flutter build windows --release
-      
+
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
           name: komet-windows
-          path: build/windows/runner/Release
+          path: build/windows/x64/runner/Release/
           retention-days: 30
 
   build-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev libsecret-1-dev
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.5'
           channel: 'stable'
-      
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev libsecret-1-dev
-      
+
       - name: Get dependencies
         run: flutter pub get
-      
+
       - name: Build Linux
         run: flutter build linux --release
-      
+
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
           name: komet-linux
-          path: build/linux/x64/release/bundle
+          path: build/linux/x64/release/bundle/
           retention-days: 30
 
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.5'
           channel: 'stable'
-      
+
       - name: Get dependencies
         run: flutter pub get
-      
-      
-      - name: Analyze
+
+      - name: Analyze code
         run: flutter analyze
